--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mohit-web-projects",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "type": "module",
   "scripts": {
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tsparticles/slim": "^3.8.1",
     "@tsparticles/vue3": "^3.0.1",
+    "animate.css": "^4.1.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
